Fixed overflow on page

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ section {
 
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 main {
@@ -205,7 +204,7 @@ img {
   background-color: #fff;
   border: 1px solid rgb(229, 231, 235);
   border-radius: 8px;
-  z-index: 4;
+  z-index: 101;
   visibility: hidden;
   opacity: 0;
   transform: translate(300%);
@@ -1274,12 +1273,17 @@ footer .row {
   max-width: none;
  }
 
+.features__blob {
+  transform: translateX(100px) translateY(0px) scale(0.8);
+}
+
  .section__para {
   font-size: 16px;
  }
 
  .section__title {
   font-size: 36px;
+  text-align: center;
  }
 
  .quality__description {
@@ -1562,6 +1566,7 @@ footer .row {
 
   .start__title {
     font-size: 24px;
+    width: auto;
   }
 
   .start-container {
@@ -1587,6 +1592,7 @@ footer .row {
 
   main {
     margin-bottom: 80px;
+    overflow-x: hidden;
   }
 
   .footer__column {
